--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -715,7 +715,6 @@ p.about-para-1 {
 /********************************/
 .advantages {
     padding: 100px 0px;
-    margin-top: 5%;
 }
 
 .advantages {
@@ -859,7 +858,7 @@ p.about-para-1 {
 /*         Rooms And Plans       */
 /********************************/
 .plans-section {
-    padding: 80px 0px;
+    padding: 40px 0px;
 }
 
 .pricing-table-main {
@@ -2090,9 +2089,13 @@ h5.amenities-label {
 
 .scroll-to-top {
     position: fixed;
-    bottom: 15px;
-    right: 15px;
+    bottom: 20px;
+    right: 17px;
+    background: rgb(235, 188, 100);
+    border-radius: 50px;
     opacity: 0;
+    width: 4%;
+    height: 9%;
     transition: all .2s ease-in-out;
 }
 
@@ -2115,35 +2118,92 @@ h5.amenities-label {
     font-size: 3em;
 }
 
-.card-tr-box{
-    padding:60px 0px;
+.card-tr-box {
+    padding: 60px 0px;
 }
 
-.card-tr-box-part{
-    border-radius:0;
-    padding:40px 10px;
-    margin:10px 0px;
+.card-tr-box-part {
+    border-radius: 0;
+    padding: 20px 10px;
+    margin: 10px 0px;
     text-align: center;
 }
-.card-tr-text{
+
+.card-tr-text {
     margin-top: 5%;
     margin-left: 5%;
     margin-right: 5%;
 }
 
 h5.card-tr-title {
+    margin-top: 5%;
     font-size: 22px;
     color: #0a0a0a;
-    font-weight: 400;
+    font-weight: 600;
     text-align: center;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-figure.tr-figure > img {
+figure.tr-figure>img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-  }
+}
+
+/*--------------------------------------------------------------
+# Food Gallery Section
+--------------------------------------------------------------*/
+.gallery-food {
+    overflow: hidden;
+    margin-top: 5%;
+}
+
+.gallery-food .swiper-pagination {
+    margin-top: 20px;
+    position: relative;
+}
+
+.gallery-food .swiper-pagination .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background-color: #d1d1d7;
+    opacity: 1;
+}
+
+.gallery-food .swiper-pagination .swiper-pagination-bullet-active {
+    background-color: #F05941;
+}
+
+.gallery-food .swiper-slide-active {
+    text-align: center;
+}
+
+.section-bg {
+    background-color: #eee;
+}
+
+.section-header {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.section-header h3 span {
+    color: #E86A33;
+}
+
+@media (min-width: 992px) {
+    .gallery-food .swiper-wrapper {
+        padding: 40px 0;
+    }
+
+    .gallery-food .swiper-slide-active {
+        border: 6px solid #C51605;
+        padding: 4px;
+        background: #fff;
+        z-index: 1;
+        transform: scale(1.2);
+    }
+}
 
 @-webkit-keyframes bounce {
     0% {
