--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -56,7 +56,7 @@
 
 
 
-<div class="modal fade" data-backdrop="false" tabindex="-1" role="dialog" id="loginModal">
+<div class="modal fade" data-backdrop="false" tabindex="-1" role="dialog" id="loginModal" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
