Reservation logic updated

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -618,8 +618,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="card-tr-box-part">
                 <figure class="tr-figure">
-                    <img src="assets/images/howrah-station.jpg" style="width: 100%; height: 70%;"
-                        alt="Station">
+                    <img src="assets/images/howrah-station.jpg" style="width: 100%; height: 70%;" alt="Station">
                 </figure>
 
                 <h5 class="card-tr-title">Howrah Railway Station</h5>
@@ -645,8 +644,7 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="card-tr-box-part">
                 <figure class="tr-figure">
-                    <img src="assets/images/bus-terminus.jpg" style="width: 100%; height: 60%;"
-                        alt="Bus Terminus">
+                    <img src="assets/images/bus-terminus.jpg" style="width: 100%; height: 60%;" alt="Bus Terminus">
                 </figure>
                 <h5 class="card-tr-title">Kona High Road Bus Terminus</h5>
                 <div class="card-tr-text">
@@ -694,8 +692,8 @@
     <h3 class="title-w3-agileits title-black-wthree">Our Gallery</h3>
     <div class="row">
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-06.jpeg" class="swipebox"><img
-                    src="assets/images/event-06.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/event-06.jpeg" class="swipebox"><img src="assets/images/event-06.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -703,8 +701,8 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-05.jpeg" class="swipebox"><img
-                    src="assets/images/event-05.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/event-05.jpeg" class="swipebox"><img src="assets/images/event-05.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -712,8 +710,8 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-03.jpeg" class="swipebox"><img
-                    src="assets/images/event-03.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/event-03.jpeg" class="swipebox"><img src="assets/images/event-03.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -721,46 +719,8 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-06.jpeg" class="swipebox"><img
-                    src="assets/images/event-06.jpeg" class="img-responsive" alt="/">
-                <div class="textbox">
-                    <h4>SWAPNO PURAN RESORT</h4>
-                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/wedding-01.jpg" class="swipebox"><img
-                    src="assets/images/wedding-01.jpg" class="img-responsive" alt="/">
-                <div class="textbox">
-                    <h4>SWAPNO PURAN RESORT</h4>
-                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
-                </div>
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-06.jpeg" class="swipebox"><img
-                    src="assets/images/event-06.jpeg" class="img-responsive" alt="/">
-                <div class="textbox">
-                    <h4>SWAPNO PURAN RESORT</h4>
-                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
-                </div>
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/food-02.jpeg" class="swipebox"><img
-                    src="assets/images/food-02.jpeg" class="img-responsive" alt="/">
-                <div class="textbox">
-                    <h4>SWAPNO PURAN RESORT</h4>
-                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
-                </div>
-            </a>
-        </div>
-        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img
-                    src="assets/images/resort-scene-01.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/event-06.jpeg" class="swipebox"><img src="assets/images/event-06.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -770,8 +730,8 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/event-05.jpeg" class="swipebox"><img
-                    src="assets/images/event-05.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/wedding-01.jpg" class="swipebox"><img src="assets/images/wedding-01.jpg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -779,8 +739,8 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-scene-02.jpeg" class="swipebox"><img
-                    src="assets/images/resort-scene-02.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/event-06.jpeg" class="swipebox"><img src="assets/images/event-06.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -788,8 +748,8 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img
-                    src="assets/images/resort-scene-01.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/food-02.jpeg" class="swipebox"><img src="assets/images/food-02.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -797,8 +757,46 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-staff.jpeg" class="swipebox"><img
-                    src="assets/images/resort-staff.jpeg" class="img-responsive" alt="/">
+            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="assets/images/resort-scene-01.jpeg"
+                    class="img-responsive" alt="/">
+                <div class="textbox">
+                    <h4>SWAPNO PURAN RESORT</h4>
+                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
+            <a href="assets/images/event-05.jpeg" class="swipebox"><img src="assets/images/event-05.jpeg"
+                    class="img-responsive" alt="/">
+                <div class="textbox">
+                    <h4>SWAPNO PURAN RESORT</h4>
+                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
+                </div>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
+            <a href="assets/images/resort-scene-02.jpeg" class="swipebox"><img src="assets/images/resort-scene-02.jpeg"
+                    class="img-responsive" alt="/">
+                <div class="textbox">
+                    <h4>SWAPNO PURAN RESORT</h4>
+                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
+                </div>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
+            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="assets/images/resort-scene-01.jpeg"
+                    class="img-responsive" alt="/">
+                <div class="textbox">
+                    <h4>SWAPNO PURAN RESORT</h4>
+                    <p><i class="fa fa-image" aria-hidden="true"></i></p>
+                </div>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-3 gallery-grid gallery1">
+            <a href="assets/images/resort-staff.jpeg" class="swipebox"><img src="assets/images/resort-staff.jpeg"
+                    class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
                     <p><i class="fa fa-image" aria-hidden="true"></i></p>
@@ -809,79 +807,7 @@
     <div class="clearfix"> </div>
 </section>
 
-<section id="gallery-food" class="gallery-food section-bg">
-    <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-            <h3 class="title-w3-agileits title-black-wthree">Enjoy Our <span>Delicious Food</span></h3>
-        </div>
-
-        <div class="gallery-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/bengali-thali.jpeg">
-                        <img src="assets/images/bengali-thali.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/fish-finger.jpeg">
-                        <img src="assets/images/fish-finger.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/chicken-biryani.jpeg">
-                        <img src="assets/images/chicken-biryani.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/tikka-kebab.jpeg">
-                        <img src="assets/images/tikka-kebab.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/hariyali-chicken.jpeg">
-                        <img src="assets/images/hariyali-chicken.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/butter-masala.jpeg">
-                        <img src="assets/images/butter-masala.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/chicken-lollipop.jpeg">
-                        <img src="assets/images/chicken-lollipop.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/mixed-fried-rice.jpeg">
-                        <img src="assets/images/mixed-fried-rice.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/chilli-chicken.jpeg">
-                        <img src="assets/images/chilli-chicken.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-
-                <div class="swiper-slide">
-                    <a class="glightbox" data-gallery="images-gallery" href="assets/images/crispy-chicken.jpeg">
-                        <img src="assets/images/crispy-chicken.jpeg" class="img-responsive" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-    </div>
-</section>
+<app-food-slider></app-food-slider>
 
 <div class="plans-section" id="rooms">
     <div class="container">
@@ -963,10 +889,10 @@
     </div>
 </div>
 
-<a class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}" (click)="scrollToTop()">
+<button class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}" (click)="scrollToTop()">
     <div style="display: flex; justify-content: center; align-items: center;">
-        <i class=" fas fa-arrow-up bounce" style="color: #157114;"></i>
+        <i class=" fas fa-arrow-up bounce" style="color: white; font-size: 25px;"></i>
     </div>
-</a>
+</button>
 
 <app-footer></app-footer>
