--- a/src/app/components/admin-console/admin-console.component.html
+++ b/src/app/components/admin-console/admin-console.component.html
@@ -16,9 +16,7 @@
                     <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-user">
-                    <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                    <li><a [routerLink]="'/admin/accounts'"><i class="fa fa-user fa-fw"></i> User Profile</a>
                     </li>
                     <li class="divider"></li>
                     <li>
@@ -39,10 +37,19 @@
         <div class="sidebar-collapse">
             <ul class="nav" id="main-menu">
                 <li>
-                    <a class="active-menu" [routerLink]="'/admin/addRoom'"><i class="fa fa-plus-circle"></i>Add Room</a>
+                    <a class="active-menu" [routerLink]="'/admin/bookings'"><i class="fa fa-plus-circle"></i> Manage Bookings</a>
                 </li>
                 <li>
-                    <a [routerLink]="'/admin'"><i class="fa fa-desktop"></i> News Letters</a>
+                    <a [routerLink]="'/admin/addRoom'"><i class="fa fa-desktop"></i> Add Room</a>
+                </li>
+                <li>
+                    <a (click)="onLogout()">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" style="margin-right: 2%; color: white;"
+                            viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                            <path
+                                d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z" />
+                        </svg> Logout
+                    </a>
                 </li>
             </ul>
         </div>
