--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,6 +5,10 @@
     background: #000C66;
 }
 
+.module {
+    scroll-behavior: smooth;
+}
+
 .navbar-default {
     background: none;
     border: none;
@@ -1987,94 +1991,61 @@ ul.green-list li::before {
     width: 15px;
 }
 
+
 .container-amenities {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.5fr 1.5fr 1fr 1fr;
-    grid-template-rows: 5fr 5.9fr 4.6fr 4.5fr 2fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-        "area-02 area-02 area-02 area-03 area-03 area-03 area-01 area-01 area-01"
-        "area-04 area-04 area-04 area-04 area-04 area-04 area-01 area-01 area-01"
-        "area-05 area-05 area-05 area-06 area-06 area-06 area-01 area-01 area-01"
-        "area-05 area-05 area-05 area-07 area-07 area-07 area-07 area-07 area-07"
-        "area-05 area-05 area-05 area-07 area-07 area-07 area-07 area-07 area-07";
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 5vw);
+    grid-gap: 1.5rem;
+}
+
+.gallery__img__amenities {
     width: 100%;
-    height: 20%;
-    grid-gap: 1rem;
-    position: relative;
-    filter: brightness(95%);
-    transition: all 0.3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
-.area-02 {
-    grid-area: area-02;
+.amenities_gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
 }
 
-.area-02:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
+.amenities_gallery__item--2 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 5;
 }
 
-.area-03 {
-    grid-area: area-03;
+.amenities_gallery__item--3 {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 5;
+    grid-row-end: 9;
 }
 
-.area-03:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
+.amenities_gallery__item--4 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 9;
+    grid-row-end: 13;
 }
 
-.area-01 {
-    grid-area: area-01;
+.amenities_gallery__item--5 {
+    grid-column-start: 5;
+    grid-column-end: 13;
+    grid-row-start: 9;
+    grid-row-end: 13;
 }
 
-.area-01:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
-}
-
-.area-04 {
-    grid-area: area-04;
-}
-
-.area-04:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
-}
-
-.area-05 {
-    grid-area: area-05;
-}
-
-.area-05:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
-}
-
-.area-06 {
-    grid-area: area-06;
-}
-
-.area-06:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
-}
-
-.area-07 {
-    grid-area: area-07;
-}
-
-.area-07:hover {
-    filter: brightness(120%);
-    transform: scale(1.03);
-    cursor: pointer;
+.amenities_gallery__item--6 {
+    grid-column-start: 9;
+    grid-column-end: 13;
+    grid-row-start: 1;
+    grid-row-end: 9;
 }
 
 h5.amenities-label {
@@ -2083,7 +2054,7 @@ h5.amenities-label {
     color: white;
     font-weight: 500;
     left: 5%;
-    bottom: 15%;
+    bottom: 25%;
     cursor: pointer;
 }
 
