--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,16 +19,43 @@
                 <nav class="menu menu--iris">
                     <ul class="nav navbar-nav menu__list">
                         <li class="menu__item menu__item--current"><a href="" class="menu__link">Home</a></li>
-                        <li class="menu__item"><a href="#about" class="menu__link scroll">About</a></li>
-                        <li class="menu__item"><a href="#team" class="menu__link scroll">Team</a></li>
-                        <li class="menu__item"><a href="#gallery" class="menu__link scroll">Gallery</a></li>
-                        <li class="menu__item"><a href="#rooms" class="menu__link scroll">Rooms</a></li>
-                        <li class="menu__item"><a href="#contact" class="menu__link scroll">Contact Us</a></li>
+                        <li class="menu__item"><a (click)="scrollToAnchor('about')" class="menu__link scroll">About</a>
+                        </li>
+                        <li class="menu__item"><a (click)="scrollToAnchor('locations')" class="menu__link scroll">Travel
+                                Guide</a></li>
+                        <li class="menu__item"><a (click)="scrollToAnchor('gallery')"
+                                class="menu__link scroll">Gallery</a></li>
+                        <li class="menu__item"><a (click)="scrollToAnchor('rooms')" class="menu__link scroll">Rooms</a>
+                        </li>
+                        <li class="menu__item"><a data-toggle="modal" data-target="#contactModal"
+                                class="menu__link scroll">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
         </nav>
 
+    </div>
+</div>
+
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.3749975149794!2d88.2651361793457!3d22.639803000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8833a8331c303%3A0xc422382111eb88fb!2z4Ka44KeN4Kas4Kaq4KeN4KaoIOCmquCnguCmsOCmoyhzYXBubyBwdXJvbik!5e0!3m2!1sen!2sin!4v1700675239312!5m2!1sen!2sin"
+                    width="100%" height="100%" style="border:0; margin-top: 2%;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h5>Contact Us</h5>
+                <p class="contact-agile1"><strong>Phone : </strong> +91 9830292497</p>
+                <p class="contact-agile1"><strong>Email : </strong> <a href="mailto:swapnopuran557@gmail.com">
+                        swapnopuran557@gmail.com</a></p>
+                <p class="contact-agile1"><strong>Address : </strong> Jotgiri, Lakshmanpur, Howrah</p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -90,7 +117,7 @@
     <div class="clearfix"></div>
 </div>
 
-<div class="container" style="margin-top: 5%;">
+<div class="container" style="margin-top: 5%;" id="about">
     <div class="row">
         <div class="col-md-6">
             <h3 class="title-w3-agileits title-black-wthree">About Us</h3>
@@ -238,38 +265,42 @@
 <div class="container">
     <h3 class="title-w3-agileits title-black-wthree">Facilities And Amenities</h3>
     <div class="row">
-        <div class="container-amenities">
-            <div class="area-02">
-                <img src="assets/images/resort-scene-04.jpeg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Restaurant</h5>
-            </div>
-            <div class="area-03">
-                <img src="assets/images/balcony.jpg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Private Balcony</h5>
-            </div>
-            <div class="area-01">
-                <img src="assets/images/event-01.jpeg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Event Management</h5>
-            </div>
-            <div class="area-04">
-                <img src="assets/images/gym.jpg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Gymnasium</h5>
-            </div>
-            <div class="area-05">
-                <img src="assets/images/food-01.jpeg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Authentic Food</h5>
-            </div>
-            <div class="area-06">
-                <img src="assets/images/bonfire.jpg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Fireplace</h5>
-            </div>
-            <div class="area-07">
-                <img src="assets/images/swimming-pool.jpg" alt="" class="gallery__img">
-                <h5 class="amenities-label">Swimming Pool</h5>
+        <div class="col">
+            <div class="container-amenities">
+                <figure class="gallery__item amenities_gallery__item--1">
+                    <img src=" assets/images/resort-scene-04.jpeg" alt="Swapno Puran Restaurant"
+                        class="gallery__img__amenities">
+                    <h5 class="amenities-label">Restaurant</h5>
+                </figure>
+                <figure class="gallery__item amenities_gallery__item--2">
+                    <img src=" assets/images/balcony.jpg" alt="Swapno Puran Reort"
+                        class="gallery__img__amenities">
+                    <h5 class="amenities-label">Private Balcony</h5>
+                </figure>
+                <figure class="gallery__item amenities_gallery__item--3">
+                    <img src=" assets/images/swimming-pool.jpg" alt="Swapno Puran Swimming Pool"
+                        class="gallery__img__amenities">
+                    <h5 class="amenities-label">Swimming Pool</h5>
+                </figure>
+                <figure class="gallery__item amenities_gallery__item--4">
+                    <img src=" assets/images/food-01.jpeg" alt="Swapno Puran Food"
+                        class="gallery__img__amenities">
+                    <h5 class="amenities-label">Authentic Food</h5>
+                </figure>
+                <figure class="gallery__item amenities_gallery__item--5">
+                    <img src=" assets/images/gym.jpg" alt="Swapno Puran Gym" class="gallery__img__amenities">
+                    <h5 class="amenities-label">Gymnasium</h5>
+                </figure>
+                <figure class="gallery__item amenities_gallery__item--6">
+                    <img src=" assets/images/event-01.jpeg" alt="Swapno Puran Events"
+                        class="gallery__img__amenities">
+                    <h5 class="amenities-label">Event Management</h5>
+                </figure>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Locations -->
 <section class="locations" id="locations">
@@ -786,7 +817,7 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="assets/images/resort-scene-01.jpeg"
+            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="../../../assets/images/swimming-pool-02.jpg"
                     class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
@@ -888,6 +919,66 @@
         </div>
     </div>
 </div>
+
+<section>
+    <h3 class="title-w3-agileits title-black-wthree" style="margin-bottom: -4%;">Rooms Gallery</h3>
+    <div class="banner-bottom">
+        <div class="container">
+            <div class="agileits_banner_bottom">
+                <h3><span>A Banquet Hall Worth To See</span> Mark Your Special Occasions with Us
+                </h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/hall-rooms-01.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/hall-rooms-02.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/hall-rooms-03.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+            </div>
+            <div class="agileits_banner_bottom">
+                <h3 style="margin-top: 5%; margin-bottom: 2%;"><span>Dream in your own space</span> Personalize your
+                    sleep sanctuary
+                </h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/bedroom-01.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/bedroom-02.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/bedroom-03.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+            </div>
+            <div class="agileits_banner_bottom">
+                <h3 style="margin-top: 5%; margin-bottom: 2%;"><span>Meeting Rooms For Every Occasion</span>
+                    Crafting Experiences You’ll Cherish Forever
+                </h3>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/meeting-room-01.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/meeting-room-02.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+                <div class="col-sm-6 col-md-4 mb-3">
+                    <img src=" assets/images/meeting-room-03.jpg" alt="" class="fluid img-thumbnail">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 
 <button class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}" (click)="scrollToTop()">
     <div style="display: flex; justify-content: center; align-items: center;">
