--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,12 +23,35 @@
                         <li class="menu__item"><a href="#team" class="menu__link scroll">Team</a></li>
                         <li class="menu__item"><a href="#gallery" class="menu__link scroll">Gallery</a></li>
                         <li class="menu__item"><a href="#rooms" class="menu__link scroll">Rooms</a></li>
-                        <li class="menu__item"><a href="#contact" class="menu__link scroll">Contact Us</a></li>
+                        <li class="menu__item"><a data-toggle="modal" data-target="#contactModal"
+                            class="menu__link scroll">Contact Us</a></li>
                     </ul>
                 </nav>
             </div>
         </nav>
 
+    </div>
+</div>
+
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog">
+    <!-- Modal1 -->
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4>SWAPNO <span>PURAN</span> RESORT</h4>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3682.3749975149794!2d88.2651361793457!3d22.639803000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8833a8331c303%3A0xc422382111eb88fb!2z4Ka44KeN4Kas4Kaq4KeN4KaoIOCmquCnguCmsOCmoyhzYXBubyBwdXJvbik!5e0!3m2!1sen!2sin!4v1700675239312!5m2!1sen!2sin"
+                    width="100%" height="100%" style="border:0; margin-top: 2%;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h5>Contact Us</h5>
+                <p class="contact-agile1"><strong>Phone : </strong> +91 9830292497</p>
+                <p class="contact-agile1"><strong>Email : </strong> <a href="mailto:swapnopuran557@gmail.com">
+                        swapnopuran557@gmail.com</a></p>
+                <p class="contact-agile1"><strong>Address : </strong> Jotgiri, Lakshmanpur, Howrah</p>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -67,15 +90,15 @@
                 <form #loginForm="ngForm">
                     <p>Please fill out the form below to access the management portal</p>
                     <div class="form-group">
-                        <label for="email">Username</label>
-                        <input type="text" class="form-control" name="username" placeholder="Username" ngModel
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" name="username" id="username" placeholder="Username" ngModel
                             #usernameInput="ngModel" required>
                         <span class="help-block" style="color:red;"
                             *ngIf="usernameInput.invalid && usernameInput.touched">Please enter a username</span>
                     </div>
                     <div class="form-group">
-                        <label for="email">Password</label>
-                        <input type="password" class="form-control" name="password" placeholder="Password" ngModel
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" ngModel
                             #passwordInput="ngModel" required>
                         <span class="help-block" style="color:red;"
                             *ngIf="passwordInput.invalid && passwordInput.touched">Please enter a password.</span>
