--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -8,6 +8,18 @@
                         Homepage
                     </a>
                 </li>
+                <li>
+                    <a [routerLink]="'/reservation'">
+                        <i class="fa fa-hotel"></i>
+                        Reservation
+                    </a>
+                </li>
+                <li>
+                    <a [routerLink]="'/schedule-calendar'">
+                        <i class="fa fa-calendar"></i>
+                        View Calendar
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -20,7 +32,7 @@
                     </h1>
                 </div>
             </div>
-            <form #bookingForm="ngForm" (ngSubmit)="onSubmitBookingDetails(bookingForm.value); bookingForm.resetForm()">
+            <form #bookingForm="ngForm" (ngSubmit)="createTransactionAndSubmitBooking(bookingForm.value); bookingForm.resetForm()">
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
                         <div class="panel panel-primary">
@@ -135,7 +147,7 @@
                                 </div>
                                 <div class="d-grid gap-2">
                                     <button class="btn btn-primary" type="button" style="margin-top: 5%;"
-                                        [disabled]="bookingForm.invalid"
+                                        [disabled]="bookingForm.invalid || invalidDateRangeMessage.length > 0"
                                         (click)="checkRoomAvailability(bookingForm.value.roomType, bookingForm.value.checkInDate, bookingForm.value.checkOutDate)">Check
                                         Room Availability</button>
                                 </div>
@@ -148,11 +160,11 @@
                 <div class="row">
                     <div class="col text-center">
                         <span style="font-weight: bold; color: #6B240C;">All the fields marked in * are Mandatory.
-                            Kindly fill all the fields to proceed to booking.</span>
+                            Kindly fill all the fields to check room availability and proceed to booking.</span>
                     </div>
                 </div>
 
-                <div class="row" *ngIf="displayAvailableRooms" style="margin-top: 5%;">
+                <div class="row" *ngIf="displayAvailableRooms && invalidDateRangeMessage.length == 0" style="margin-top: 5%;">
                     <div class="col">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
@@ -162,7 +174,10 @@
                                 <!-- Advanced Tables -->
                                 <div class="panel panel-default">
                                     <div class="panel-body">
-                                        <div class="table-responsive">
+                                        <h4 class="text-center" *ngIf="noRoomsAvailable" style="font-weight: bold; color: #E31F1B;">
+                                            No Rooms Of The Selected Type Available For The Selected Date Range
+                                        </h4>
+                                        <div class="table-responsive" *ngIf="!noRoomsAvailable">
                                             <table class="table table-striped table-bordered table-hover"
                                                 id="dataTables-example">
                                                 <thead>
@@ -181,7 +196,7 @@
                                                         <th>{{room.roomType}}</th>
                                                         <td>
                                                             <button class="btn btn-success"
-                                                                (click)="onSelectRoom(room)">Select</button>
+                                                                (click)="onSelectRoom(room)" type="button">Select</button>
                                                         </td>
                                                     </tr>
                                                 </tbody>
@@ -198,8 +213,10 @@
                 <div class="row" style="margin-top: 2%;">
                     <div class="col">
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg btn-block"
-                                [disabled]="bookingForm.invalid || invalidDateRangeMessage.length > 0 || !displayAvailableRooms || !isRoomSelected">Submit</button>
+                            <button type="submit" class="btn btn-success btn-lg btn-block"
+                                [disabled]="bookingForm.invalid || invalidDateRangeMessage.length > 0 || !displayAvailableRooms || !isRoomSelected">
+                                Proceed To Checkout <i class="fas fa-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
