--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css';
 @import 'https://use.fontawesome.com/releases/v5.8.1/css/all.css';
 @import "~angular-notifier/styles";
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 
 body.modal-open {
     padding-right: 0 !important;
