Gallery image updated

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -817,7 +817,7 @@
             </a>
         </div>
         <div class="col-sm-6 col-md-3 gallery-grid gallery1">
-            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="../../../assets/images/swimming-pool-02.jpg"
+            <a href="assets/images/resort-scene-01.jpeg" class="swipebox"><img src="assets/images/swimming-pool-02.jpg"
                     class="img-responsive" alt="/">
                 <div class="textbox">
                     <h4>SWAPNO PURAN RESORT</h4>
