--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -304,7 +304,7 @@
 
 <!-- Locations -->
 <section class="locations" id="locations">
-    <<h3 class="title-w3-agileits title-black-wthree">Iconic Landmarks Nearby</h3>
+    <h3 class="title-w3-agileits title-black-wthree">Iconic Landmarks Nearby</h3>
 
         <div class="location-content">
 
